Cleanup Add Move Card action to the custom reducer Add Button component Refactoring

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trello-clone",
   "title": "Trello Clone",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
