--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trello-clone",
+  "name": "bash",
   "title": "Trello Clone",
-  "version": "0.1.0",
+  "version": "npm init @eslint/config",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -23,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pretty": "yarn prettier --write ."
+    "pretty": "yarn prettier --write .",
+    "lint": "eslint --ext=ts,tsx --max-warnings 0",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +46,14 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-react": "^7.31.10",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1"
-  }
+  },
+  "main": "index.tsx",
+  "repository": "https://github.com/glaucopater/trello-clone/",
+  "author": "Glauco Pater <glauco.pater@gmail.com>"
 }
