Update eslint rules and husky Minor CSS change on addButton

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,3 +13,12 @@ parserOptions:
 plugins:
   - react
   - "@typescript-eslint"
+rules:
+  "react/react-in-jsx-scope": off
+  "no-case-declarations": off
+  "no-unused-vars": off
+  "@typescript-eslint/no-explicit-any": off
+  "@typescript-eslint/no-unused-vars": off
+settings:
+  react: 
+    version: "18.2.0"
